src/tests/fixtures/interfaces/tag/ImplementsTagWithoutTypeOrInterface.invalid.ts.expected
-----------------
INPUT
----------------- 
/** @gqlImplements Node */
function hello() {
  return "world";
}

-----------------
OUTPUT
-----------------
src/tests/fixtures/interfaces/tag/ImplementsTagWithoutTypeOrInterface.invalid.ts:1:6 - error: `@gqlImplements` can only be used on Grats type or interface declarations. Did you mean to include the `@gqlType` or `@gqlInterface` tag in this docblock?

1 /** @gqlImplements Node */
       ~~~~~~~~~~~~~
